--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
 
     <div class="hero">
-        <img src="/header.avif" alt="">
+        <img src="header.avif" alt="">
         <div class="text-overlay">Ableton</div>
     </div>
 
@@ -77,10 +77,10 @@
     <div class="page-about__collage page-about__collage--products">
         <div class="page-about__collage__background bg-lemonade"></div>
         <div class="page-about__collage__media imgix-fluid imgix-fluid-bg"
-            style="background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; background-image:url(/lemonade\ 1.jpg);">
+            style="background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; background-image:url(lemonade\ 1.jpg);">
         </div>
         <div class="page-about__collage__media imgix-fluid imgix-fluid-bg"
-            style="background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; background-image:url(/lemonade\ 2.jpg);">
+            style="background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; background-image:url(lemonade\ 2.jpg);">
         </div>
     </div>
 
@@ -97,9 +97,9 @@
 
     <div id="content-img">
 
-        <img id="content-img-inside" src="/office work.avif" alt="">
+        <img id="content-img-inside" src="office work.avif" alt="">
 
-        <img id="play-button" src="/playbutton.png" alt="">
+        <img id="play-button" src="playbutton.png" alt="">
     </div>
 
     <div class="collage-description">
@@ -118,12 +118,12 @@
 
     <div class="main-people-container">
         <div class="box-people-container">
-            <div id="img-size" class="people-img"><img src="/poeple 1.jpg" alt=""></div>
-            <div id="img-size" class="people-img"><img src="/poeple 2.jpg" alt=""></div>
+            <div id="img-size" class="people-img"><img src="poeple 1.jpg" alt=""></div>
+            <div id="img-size" class="people-img"><img src="poeple 2.jpg" alt=""></div>
 
         </div>
 
-        <div class="people-second-img"><img src="/people 3.jpg" alt=""></div>
+        <div class="people-second-img"><img src="people 3.jpg" alt=""></div>
 
     </div>
 
@@ -141,7 +141,7 @@
     </div>
 
     <div class="passion">
-        <img id="passion-inside-img" src="/passion img.avif" alt="">
+        <img id="passion-inside-img" src="passion img.avif" alt="">
     </div>
 
 
@@ -162,8 +162,8 @@
     <div class="main-production-container">
         <div class="box-production-container">
         </div>
-        <div class="production-img"><img src="/production img1.jpg" alt=""></div>
-        <div id="production-img-size"><img src="/production img2.jpg" alt=""></div>
+        <div class="production-img"><img src="production img1.jpg" alt=""></div>
+        <div id="production-img-size"><img src="production img2.jpg" alt=""></div>
     </div>
 
     <div class="production-text">
@@ -182,7 +182,7 @@
     </div>
 
     <div class="last-container">
-        <img src="/lastimg.jpg" alt="">
+        <img src="lastimg.jpg" alt="">
         <div class="last-container-text">
             <h3>We’re really proud of the work we’ve done so far. But there’s so much more to
                 come. If you’d like to be a part of it, please join us. </h3>
@@ -299,5 +299,6 @@
         </div>
     </footer>
 </body>
+
 
 </html>
