--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
 
     <div class="hero">
-        <img src="header.avif" alt="">
+        <img src="/newproject.github.io/header.avif" alt="">
         <div class="text-overlay">Ableton</div>
     </div>
 
@@ -302,3 +302,4 @@
 
 
 </html>
+
